[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

[lib]
path="src/lib.rs"
[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0.219", features = ["derive"] }



[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls", 
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate"
]

[dev-dependencies]
actix-rt = "2.10.0"
reqwest = "0.12.22"
tokio = "1.47.0"
