[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

[lib]
path="src/lib.rs"
[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
actix-web = "4.0"
config = { version = "0.15.16", features = ["yaml","json"] }
serde = { version = "1.0.219", features = ["derive"] }
dotenv = "0.15.0"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4.15"
env_logger = "0.11.8"


[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls", 
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate"
]


[dev-dependencies]
actix-rt = "2.10.0"
reqwest = "0.12.22"
tokio = "1.47.0"
